Всё исправил теперь не нарушает принцип единственной ответственности